--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.0.1",
     "express": "^4.21.0",
     "mongoose": "^8.6.3"
   }
